<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/new_high_score"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:id="@+id/text"/>

    <com.ayyyyyyylmao.snakeservice.PixelEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/save_hint"
        android:maxLines="1"
        android:maxLength="12"
        android:id="@+id/playername"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <com.ayyyyyyylmao.snakeservice.PixelButton
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dont_save"
            android:textColor="#000000"
            android:background="@drawable/button_custom"
            android:id="@+id/dontsave"/>

        <com.ayyyyyyylmao.snakeservice.PixelButton
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="#000000"
            android:background="@drawable/button_custom"
            android:id="@+id/save"/>

    </LinearLayout>

</LinearLayout>