<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/game_over_title"
            android:gravity="center"
            android:id="@+id/dialogtitle"
            android:textColor="@android:color/white" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/dialogtitle">

        <Button
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/quit"
            android:textColor="#000000"
            android:background="@drawable/button_custom"
            android:id="@+id/quitbutton" />

        <Button
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/playagain"
            android:textColor="#000000"
            android:background="@drawable/button_custom"
            android:id="@+id/restartbutton" />

    </LinearLayout>


</RelativeLayout>