<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overlay_permission_message"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:padding="10dp"
        android:id="@+id/text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.ayyyyyyylmao.snakeservice.PixelButton
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:id="@+id/buttonCancel"/>

        <com.ayyyyyyylmao.snakeservice.PixelButton
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_custom"
            android:text="@string/ok"
            android:textColor="#000000"
            android:id="@+id/buttonOk"/>

    </LinearLayout>


</LinearLayout>